<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com | smart-space@qq.com>
    2019（原型框架）2021（正式命名TinUI发布）
基于GPLv3和LGPLv3发布

==========更新日志==========


==========5.31==========
2025-6-27
1. combobox添加响应色和响应动画
2. onoff增加响应色
3. 更新说明文档

==========5.30==========
2025-6-20
1. 修复spinbox样式问题
2. 动画效果全改由after方法实现
3. notebook滑动块仅在栏目数大于标签栏时出现
4. treeview滚动条仅在元素超出视图时显示
5. treeview, listbox, listview销毁后清理内部数据对象
6. button2在text为空时，删除文本元素，返回button为None
!!! 弃用TinUIEvent类，暂停提供TinUIWidget类

==========5.29==========
2025-6-15
1. button2改为鼠标松开后执行回调函数，样式恢复逻辑改为鼠标松开
2. 优化flyout动画
3. 修复Dialog的提示色错误问题

==========5.28==========
2025-6-7
1. ratingbar增加返回背景元素
2. pivot增加选择函数
3. entry, passwordbox增加过渡响应颜色

==========5.27==========
2025-5-12
1. 标准样式库添加back元素
2. ratingbar添加选择评级方法

==========5.26==========
2025-4-22
1. 修复treeview以子树结尾时展开错误的问题

==========5.25==========
2025-4-12
1. 修复tinuixmltest的正则表达式错误
2. togglebutton添加开关方法

==========5.24==========
2025-3-21
1. onoff可指定标识符字体大小
2. 修复listview删除最后一个元素后，仍然显示最后一个元素高度的问题
3. 修复listbox删除最后一个元素时发生的错误

==========5.23==========
2025-3-14
1. 修复entry, passwordbox提示线在TinUIXml下的错位问题
2. 修复spinbox强制锁定的问题

==========5.22==========
2025-3-9
1. 自带uixml的控件，在删除时也会删除TinUIXml
2. 修复theme错误
3. 修复对话框基类

==========5.21==========
2025-3-7
1. listbox添加清空功能
2. 基于TinUILight, TinUIDark的Dialog附加样式类
3. spinbox回车时，如果输入数据符合条件，则触发回调函数
4. radiobox方法增加select

==========5.20==========
2025-3-1
1. 修复listview清空或删除视图后页面元素仍占用内存的问题
2. 修复TinUIXml(allanchor)对齐方式分配id不唯一的问题

==========5.19==========
2025-2-27
1. listview增加清空方法
2. entry中有内容就显示删除按钮
3. 删除passwordbox输入判定
4. 优化entry, passwordbox提示符样式(不再支持linew参数)

==========5.18==========
2025-2-12
1. 修复列表选择对话框的尺寸错误问题
2. 超链接、菜单等包含函数类型的多接受类型参数，使用callable判断是否可调用
3. pivot初始化时不再自动触发选择
4. 浮出窗口在初始化后直接隐藏，等待调用
5. notebook标签标题与边框间隔2px

==========5.17==========
2025-2-8
1. TinUIXml下expander、flyout支持直接使用xml布局
2. 优化展示画廊配色，修改部分示例
3. 优化spinbox样式