@@ -6,6 +6,12 @@
 ==========更新日志==========
 
 
+==========5.32==========
+2025-
+1. listbox滚动条仅在元素超出视图时显示
+*2. textbox滚动条仅在元素超出视图时显示
+3. 优化treeview滚动条的动态显示
+
 ==========5.31==========
 2025-6-27
 1. combobox添加响应色和响应动画
